# CodeCrafter

./: ARCHITECTURE.MD  Cargo.toml  README.MD  WORKFLOW.MD
src/llm/: mod.rs
